package TicTacToe.Game;

public class Position {
    public int row;
    public int col;

    public Position(int row, int column) {
        this.row = row;
        this.col = column;
    }
}
