@startuml
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam classAttributeIconSize 0


package "com.lld.tictactoe.model" {
    class Board {
        - {static} Character EMPTY
        - int size
        - Character[][] grid
        + <<Create>> Board(int)
        + int getSize()
        + boolean isValidMove(Position)
        + void makeMove(Position,Character)
        + boolean hasGameStateChanged(GameContext)
        - boolean isWinningLine(Character[])
        + void printBoard()
    }

    class Position {
        + int row
        + int col
        + <<Create>> Position(int,int)
    }

    class Player {
        - Character symbol
        - PlayerStrategy playerStrategy
        + <<Create>> Player(Character,PlayerStrategy)
        + Character getSymbol()
        + PlayerStrategy getPlayerStrategy()
    }

    abstract class GameState {
        - Player player
        + <<Create>> GameState(Player)
        + <<Create>> GameState()
        + Player getPlayer()
        + {abstract} boolean isGameOver()
    }

    class InProgressState {
        + <<Create>> InProgressState(Player)
        + boolean isGameOver()
    }

    class WonState {
        + <<Create>> WonState(Player)
        + boolean isGameOver()
    }

    class DrawState {
        + boolean isGameOver()
    }

    GameState <|-- InProgressState
    GameState <|-- WonState
    GameState <|-- DrawState
}

package "com.lld.tictactoe.observer" {
    class GameContext {
        - GameState currentState
        + <<Create>> GameContext(Player)
        + void setCurrentState(GameState)
        + boolean isGameOver()
        + GameState getCurrentState()
    }

    interface GameEventListener {
        ~ void onMoveMade(Position,Character)
        ~ void onGameStateChanged(GameState)
    }

    class FileLoggerListener {
        - String logFilePath
        + <<Create>> FileLoggerListener(String)
        + void onMoveMade(Position,Character)
        + void onGameStateChanged(GameState)
        - void log(String)
    }

    GameEventListener <|.. FileLoggerListener
}

package "com.lld.tictactoe.strategy" {
    interface PlayerStrategy {
        ~ Position makeMove(Board)
    }

    class HumanPlayerStrategy {
        - String playerName
        - Scanner scanner
        + <<Create>> HumanPlayerStrategy(String)
        + Position makeMove(Board)
    }

    PlayerStrategy <|.. HumanPlayerStrategy
}

package "com.lld.tictactoe.factory" {
    class PlayerFactory {
        + {static} Player createPlayer(Character,PlayerStrategy)
    }
}

package "com.lld.tictactoe.game" {
    interface BoardGame {
        ~ void play()
        ~ void switchPlayer()
        ~ void announceResult()
    }

    class TicTacToeGame {
        - Board board
        - int numberOfPlayers
        - List<Player> players
        - int currentPlayerIndex
        - GameContext gameContext
        - List<GameEventListener> listeners
        + void addListener(GameEventListener)
        + void notifyMoveMade(Position,Character)
        + void notifyGameStateChanged(GameState)
        + <<Create>> TicTacToeGame(int,List<PlayerStrategy>,List<Character>,int)
        + void play()
        + void switchPlayer()
        + void announceResult()
    }

    BoardGame <|.. TicTacToeGame
}

package "com.lld.tictactoe.demo" {
    class TicTacDemoApplication {
        - {static} Scanner scanner
        - {static} boolean getChoice(String)
        - {static} char getSymbol(String)
        + {static} void main(String[])
    }
}

' ========= CROSS-PACKAGE RELATIONSHIPS =========
com.lld.tictactoe.game.TicTacToeGame *-- com.lld.tictactoe.model.Board
com.lld.tictactoe.game.TicTacToeGame *-- com.lld.tictactoe.observer.GameContext
com.lld.tictactoe.game.TicTacToeGame *-- com.lld.tictactoe.model.Player
com.lld.tictactoe.game.TicTacToeGame --> com.lld.tictactoe.observer.GameEventListener

com.lld.tictactoe.observer.GameContext --> com.lld.tictactoe.model.GameState
com.lld.tictactoe.model.GameState --> com.lld.tictactoe.model.Player
com.lld.tictactoe.model.Player --> com.lld.tictactoe.strategy.PlayerStrategy
com.lld.tictactoe.model.Board --> com.lld.tictactoe.model.Position
com.lld.tictactoe.model.Board --> com.lld.tictactoe.observer.GameContext

com.lld.tictactoe.factory.PlayerFactory ..> com.lld.tictactoe.model.Player
com.lld.tictactoe.factory.PlayerFactory ..> com.lld.tictactoe.strategy.PlayerStrategy

@enduml
' Trigger workflow update
